Horizontal scroll layout fix

--- a/css/app.css
+++ b/css/app.css
@@ -528,13 +528,24 @@ button:focus, button.btn:focus {
 .section-absolute__entry {
   font-size: 30rem;
   line-height: normal;
-  background: -webkit-gradient(linear, left top, right top, color-stop(52%, #000), color-stop(69%, #fff));
-  background: linear-gradient(to right, #000 52%, #fff 69%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(70%, #000), color-stop(70%, #fff));
+  background: linear-gradient(to right, #000 70%, #fff 70%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   margin: 0;
   font-weight: 300;
   position: absolute;
+}
+@media (min-width: 992px) {
+  .section-absolute__entry {
+    white-space: nowrap;
+    top: -120px;
+  }
+}
+@media (min-width: 1600px) {
+  .section-absolute__entry {
+    left: 1em;
+  }
 }
 @media (max-width: 991px) {
   .section-absolute__entry {
@@ -556,6 +567,8 @@ button:focus, button.btn:focus {
     -webkit-box-flex: 1;
         -ms-flex: 1 0 727px;
             flex: 1 0 727px;
+    position: relative;
+    z-index: -1;
   }
 }
 @media (max-width: 991px) {
